--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -39,7 +39,7 @@
         </article>
     </main>
     <footer>
-        <p>&copy; 2025 TechCon</p>
+        <p>copyright&copy; 2025 TechCon</p>
     </footer>
 </body>
 </html>
