--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -22,7 +22,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 TechCon</p>
+        <p>copyright&copy; 2025 TechCon</p>
     </footer>
 </body>
 </html>
