--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <table>
-            <caption>Detailed Schedule of Events for TechCon 2025</caption>
+            <caption>Detailed Schedule of Events for TechCon 2024</caption>
             <thead>
                 <tr>
                     <th scope="col">Time</th>
@@ -45,7 +45,7 @@
         </table>
     </main>
     <footer>
-        <p>&copy; 2025 TechCon</p>
+        <p>copyright&copy; 2025 TechCon</p>
     </footer>
 </body>
 </html>
